header-block done

--- a/public/index.html
+++ b/public/index.html
@@ -223,11 +223,40 @@
 			<!-- start header-block-->
 			<div class="header-block" id="header-block">
 				<div class="container">
-					<h1>header-block</h1>
-					<div class="row"></div>
+					<div class="row">
+						<div class="col order-md-last">
+							<div class="header-block__img-wrap"><img class="res-i" src="img/@2x/header-img.png" alt=""/>
+								<div class="garanty d-none d-sm-block">
+									<svg class="icon icon-garanty ">
+										<use xlink:href="img/svg/sprite.svg#garanty"></use>
+									</svg>
+									<div class="garanty__title">Гарантнии
+									</div>
+									<div class="garanty__text">На сейф <strong>5 лет</strong>,<br/>на замки <strong>1 год</strong>
+									</div>
+								</div>
+								<div class="header-block__price">от 2.500 Р.
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-6 col-md-8">
+							<h1>Сейфы для денег, ценностей, документов и&nbsp;оружия&nbsp;&mdash; более  100&nbsp;вариантов</h1>
+							<h3>Самые  <strong>востребованные модели всегда в&nbsp;наличии</strong>, другие доставим  в&nbsp;течение недели</h3><a class="header-block__btn scroll-link" href="#s-qwiz">Подобрать сейф по параметрам</a>
+						</div>
+					</div>
 				</div>
 			</div>
 			<!-- end header-block-->
+			<!-- start s-qwiz-->
+			<section class="s-qwiz section" id="s-qwiz">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>Ответьте на&nbsp;4&nbsp;вопроса и&nbsp;<strong>получите подборку сейфов,</strong>  подходящих именно вам</h2>
+					</div>
+					<div class="row"></div>
+				</div>
+			</section>
+			<!-- end s-qwiz-->
 			<!-- start s-category-->
 			<section class="s-category section" id="s-category">
 				<div class="container">
