add padding in .section-title

--- a/public/index.html
+++ b/public/index.html
@@ -253,15 +253,17 @@
 					<div class="section-title text-center">
 						<h2>Ответьте на&nbsp;4&nbsp;вопроса и&nbsp;<strong>получите подборку сейфов,</strong>  подходящих именно вам</h2>
 					</div>
-					<div class="row"></div>
+					<div class="qwiz-block">
+					</div>
 				</div>
 			</section>
 			<!-- end s-qwiz-->
 			<!-- start s-category-->
-			<section class="s-category section" id="s-category">
+			<section class="s-category section section-border" id="s-category">
 				<div class="container">
 					<div class="section-title text-center">
-						<h2>s-category</h2>
+						<h2>Выберите сейф для дома или офиса</h2>
+						<div class="h3">Доставляем по&nbsp;Магнитогорску в&nbsp;день заказа&nbsp;&mdash; все модели в&nbsp;наличии</div>
 					</div>
 					<div class="row"></div>
 				</div>
