--- a/public/index.html
+++ b/public/index.html
@@ -241,14 +241,14 @@
 						</div>
 						<div class="col-lg-6 col-md-8">
 							<h1>Сейфы для денег, ценностей, документов и&nbsp;оружия&nbsp;&mdash; более  100&nbsp;вариантов</h1>
-							<h3>Самые  <strong>востребованные модели всегда в&nbsp;наличии</strong>, другие доставим  в&nbsp;течение недели</h3><a class="header-block__btn scroll-link" href="#s-qwiz">Подобрать сейф по параметрам</a>
+							<p>Самые  <strong>востребованные модели всегда в&nbsp;наличии</strong>, другие доставим  в&nbsp;течение недели</p><a class="header-block__btn scroll-link" href="#s-qwiz">Подобрать сейф по параметрам</a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<!-- end header-block-->
 			<!-- start s-qwiz-->
-			<section class="s-qwiz section" id="s-qwiz">
+			<section class="s-qwiz section section-border" id="s-qwiz">
 				<div class="container">
 					<div class="section-title text-center">
 						<h2>Ответьте на&nbsp;4&nbsp;вопроса и&nbsp;<strong>получите подборку сейфов,</strong>  подходящих именно вам</h2>
@@ -265,27 +265,173 @@
 						<h2>Выберите сейф для дома или офиса</h2>
 						<div class="h3">Доставляем по&nbsp;Магнитогорску в&nbsp;день заказа&nbsp;&mdash; все модели в&nbsp;наличии</div>
 					</div>
-					<div class="row"></div>
+					<div class="row">
+								<div class="s-category__col col-12"><a class="s-category__item bg-wrap" href="#"><img class="object-fit-js lazy" src="#" data-src="img/@2x/s-category-1.jpg" alt=""/>
+									<div class="s-category__title">Все сейфы
+									</div>
+									<p>Взломостойкие, огнестойкие, встраиваемые: для документов, ценностей, оружия</p>
+									<div class="mt-auto"><span class="s-category__count">39 моделей</span>
+									</div></a>
+								</div>
+								<div class="s-category__col col-12"><a class="s-category__item bg-wrap" href="#"><img class="object-fit-js lazy" src="#" data-src="img/@2x/s-category-2.jpg" alt=""/>
+									<div class="s-category__title">Сейфы для оружия
+									</div>
+									<div class="mt-auto"><span class="s-category__count">9 моделей</span>
+									</div></a>
+								</div>
+								<div class="s-category__col col-12"><a class="s-category__item bg-wrap" href="#"><img class="object-fit-js lazy" src="#" data-src="img/@2x/s-category-3.jpg" alt=""/>
+									<div class="s-category__title">Мини-сейфы для дома
+									</div>
+									<div class="mt-auto"><span class="s-category__count">17 моделей</span>
+									</div></a>
+								</div>
+								<div class="s-category__col col-12"><a class="s-category__item bg-wrap" href="#"><img class="object-fit-js lazy" src="#" data-src="img/@2x/s-category-4.jpg" alt=""/>
+									<div class="s-category__title">Металлические стеллажи
+									</div>
+									<div class="mt-auto"><span class="s-category__count">15 моделей</span>
+									</div></a>
+								</div>
+					</div>
 				</div>
 			</section>
 			<!-- end s-category-->
 			<!-- start s-catalog-->
-			<section class="s-catalog section" id="s-catalog">
+			<section class="s-catalog section section-border" id="s-catalog">
 				<div class="container">
 					<div class="section-title text-center">
-						<h2>s-catalog</h2>
+						<h2>Самые популярные модели сейфов</h2>
 					</div>
-					<div class="row"></div>
+					<div class="s-catalog__slider s-catalog__slider--js">
+						<div class="s-catalog__slide">
+							<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+								<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+								</div>
+								<table>
+									<tr>
+										<td>Цена:</td>
+										<td>2000 Р*</td>
+									</tr>
+									<tr>
+										<td>Взломостойкость:</td>
+										<td>H0 класс</td>
+									</tr>
+									<tr>
+										<td>Тип замка:</td>
+										<td>электронный</td>
+									</tr>
+									<tr>
+										<td>Внешние размеры: (ВхШхГ)</td>
+										<td>170х260х252</td>
+									</tr>
+								</table><a class="item-prod__btn" href="#">
+								<svg class="icon icon-cart ">
+									<use xlink:href="img/svg/sprite.svg#cart"></use>
+								</svg>В корзину</a>
+							</div>
+						</div>
+						<div class="s-catalog__slide">
+							<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+								<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+								</div>
+								<table>
+									<tr>
+										<td>Цена:</td>
+										<td>2000 Р*</td>
+									</tr>
+									<tr>
+										<td>Взломостойкость:</td>
+										<td>H0 класс</td>
+									</tr>
+									<tr>
+										<td>Тип замка:</td>
+										<td>электронный</td>
+									</tr>
+									<tr>
+										<td>Внешние размеры: (ВхШхГ)</td>
+										<td>170х260х252</td>
+									</tr>
+								</table><a class="item-prod__btn" href="#">
+								<svg class="icon icon-cart ">
+									<use xlink:href="img/svg/sprite.svg#cart"></use>
+								</svg>В корзину</a>
+							</div>
+						</div>
+						<div class="s-catalog__slide">
+							<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+								<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+								</div>
+								<table>
+									<tr>
+										<td>Цена:</td>
+										<td>2000 Р*</td>
+									</tr>
+									<tr>
+										<td>Взломостойкость:</td>
+										<td>H0 класс</td>
+									</tr>
+									<tr>
+										<td>Тип замка:</td>
+										<td>электронный</td>
+									</tr>
+									<tr>
+										<td>Внешние размеры: (ВхШхГ)</td>
+										<td>170х260х252</td>
+									</tr>
+								</table><a class="item-prod__btn" href="#">
+								<svg class="icon icon-cart ">
+									<use xlink:href="img/svg/sprite.svg#cart"></use>
+								</svg>В корзину</a>
+							</div>
+						</div>
+						<div class="s-catalog__slide">
+							<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+								<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+								</div>
+								<table>
+									<tr>
+										<td>Цена:</td>
+										<td>2000 Р*</td>
+									</tr>
+									<tr>
+										<td>Взломостойкость:</td>
+										<td>H0 класс</td>
+									</tr>
+									<tr>
+										<td>Тип замка:</td>
+										<td>электронный</td>
+									</tr>
+									<tr>
+										<td>Внешние размеры: (ВхШхГ)</td>
+										<td>170х260х252</td>
+									</tr>
+								</table><a class="item-prod__btn" href="#">
+								<svg class="icon icon-cart ">
+									<use xlink:href="img/svg/sprite.svg#cart"></use>
+								</svg>В корзину</a>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-4">
+							<div class="control-wrap"></div>
+						</div>
+						<div class="col-md-4 order-md-first">
+							<div class="s-catalog__footer-text">*При оформлении заказа  уточняйте цену по&nbsp;т: <a href="tel:8(3519)22-00-22">8 (3519) 22-00-22</a>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- end s-catalog-->
 			<!-- start s-pdf-->
-			<section class="s-pdf section" id="s-pdf">
+			<section class="s-pdf section lazy-background" id="s-pdf">
 				<div class="container">
-					<div class="section-title text-center">
-						<h2>s-pdf</h2>
+					<div class="s-pdf__inner">
+						<h2>Предпочитаете смотреть  товар&nbsp;вживую, а&nbsp;потом покупать?</h2>
+						<p>Приезжайте к&nbsp;нам: ответим на&nbsp;все вопросы,  покажем сейфы, подберем именно&nbsp;то,  что вам нужно</p><a class="s-pdf__btn" href="#">Наши контакты</a>
+						<div class="s-pdf__img-wrap d-none d-sm-block"><img class="res-i" src="img/@2x/s-pdf-img.png" alt=""/>
+						</div>
 					</div>
-					<div class="row"></div>
 				</div>
 			</section>
 			<!-- end s-pdf-->
@@ -293,19 +439,111 @@
 			<section class="s-steps section" id="s-steps">
 				<div class="container">
 					<div class="section-title text-center">
-						<h2>s-steps</h2>
+						<h2>Берем на себя все, вплоть до монтирования сейфа в стену</h2>
 					</div>
-					<div class="row"></div>
+					<div class="s-steps__inner">
+						<div class="row">
+								<div class="s-steps__col col-sm-6">
+									<div class="s-steps__item"><img class="res-i lazy" src="#" data-src="img/svg/resign.svg" alt=""/>
+										<p><strong>Доставляем до двери</strong> </p>
+										<p>В&nbsp;любую точку Магнитогорска,  при наличии сейфа в&nbsp;день оплаты, при заказе&nbsp;&mdash;  за&nbsp;1&nbsp;неделю максимум.</p>
+									</div>
+								</div>
+								<div class="s-steps__col col-sm-6">
+									<div class="s-steps__item"><img class="res-i lazy" src="#" data-src="img/svg/safety-box2.svg" alt=""/>
+										<p><strong> Устанавливаем на место</strong></p>
+										<p>Если нужно, поможем с&nbsp;монтажом встраиваемого сейфа в&nbsp;стену и&nbsp;научим пользоваться замком.</p>
+									</div>
+								</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- end s-steps-->
 			<!-- start s-form-->
 			<div class="s-form section block-with-lazy" id="s-form">
 				<div class="container">
-					<div class="section-title text-center">
-						<h2>s-form</h2>
+					<div class="row">
+						<div class="col-lg-7">
+							<div class="section-title">
+								<h2>Получите консультацию по&nbsp;интересующим моделям  сейфов</h2>
+							</div>
+							<div class="s-form__img-wrap d-none d-lg-block"><img class="lazy res-i" src="#" data-src="img/@2x/man.png" alt=""/>
+								<div class="s-form__label">
+									<div class="s-form__label-name">Александр Сикерин
+									</div>
+									<div class="s-form__label-prof">руководитель 
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<p>Здравствуйте! Меня зовут Александр, я&nbsp;директор ООО &laquo;Комплексные технологии&raquo;. Мы&nbsp;реализуем сейфы с&nbsp;1990&nbsp;года, знаем о&nbsp;них все. </p>
+							<p>Готовы ответить на&nbsp;любой ваш вопрос по&nbsp;будням с&nbsp;10:00 до&nbsp;18:00. Оставьте номер телефона, наш специалист вам перезвонит.</p>
+							<p>И&nbsp;обещаю: мы&nbsp;не&nbsp;присылаем смс с&nbsp;рекламой и&nbsp;не&nbsp;докучаем звонками:) Только консультация.</p>
+							<div class="form-wrap">
+								<form>
+									<input class="order" type="hidden" name="order" value="Получить каталог и прайс"/>
+									<div class="tabs">
+										<div class="form-wrap__group">
+											<div class="form-wrap__group-title">Как с вами связаться?
+											</div>
+											<div class="tabs__caption">
+												<div class="tabs__btn active">
+													<svg class="icon icon-tel ">
+														<use xlink:href="img/svg/sprite.svg#tel"></use>
+													</svg>Звонок 
+												</div>
+												<div class="tabs__btn">
+													<svg class="icon icon-viber ">
+														<use xlink:href="img/svg/sprite.svg#viber"></use>
+													</svg>Viber
+												</div>
+												<div class="tabs__btn">
+													<svg class="icon icon-whatsapp ">
+														<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+													</svg>WhatsApp
+												</div>
+											</div>
+										</div> 
+										<div class="tabs__wrap">
+											<div class="tabs__content active">
+												<div class="form-wrap__input-wrap form-group">
+													<label><span class="form-wrap__title">Введите телефон:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="tel" required="required"/>
+													</label>
+												</div>
+												<!-- +e.input-wrap-->
+											</div>
+											<div class="tabs__content">
+												<div class="form-wrap__input-wrap form-group">
+													<label><span class="form-wrap__title">Введите viber:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="viber"/>
+													</label>
+												</div>
+												<!-- +e.input-wrap-->
+											</div>
+											<div class="tabs__content">
+												<div class="form-wrap__input-wrap form-group">
+													<label><span class="form-wrap__title">Введите whatsapp:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="whatsapp"/>
+													</label>
+												</div>
+												<!-- +e.input-wrap-->
+											</div>
+										</div>
+										<div class="h5 text-secondar">Перезвоню в течение рабочего дня</div>
+									</div>
+									<div class="form-wrap__input-wrap form-group">
+										<label><span class="form-wrap__title">Как к вам обращаться?</span><input class="form-wrap__input form-control" type="text" placeholder="Иван" name="name" required="required"/>
+										</label>
+									</div>
+									<!-- +e.input-wrap-->
+									<button class="form-wrap__btn" type="submit">Получить консультацию
+									</button>
+									<div class="form-wrap__polite text-secondary"> Нажимая на&nbsp;кнопку, вы&nbsp;даете согласие на&nbsp;обработку своих персональных данных и&nbsp;соглашаетесь с&nbsp;<a class="tdu text-secondary" href="privacy-policy.pdf" target="_blank">Политикой конфиденциальности</a>
+									</div>
+								</form>
+							</div>
+						</div>
 					</div>
-					<div class="row"></div>
 				</div>
 			</div>
 			<!-- end s-form-->
@@ -328,12 +566,7 @@
 		<div class="d-none">
 			<div class="form-wrap modal-win modal-form" id="modal-call">
 				<form>
-					<input type="hidden" name="example-input-field"/>
-					<input class="order" type="hidden" name="order" value="Заявка  с сайта"/>
-					<input class="utm_source" type="hidden" name="utm_source"/>
-					<input class="utm_term" type="hidden" name="utm_term"/>
-					<input class="utm_medium" type="hidden" name="utm_medium"/>
-					<input class="utm_campaign" type="hidden" name="utm_campaign"/>
+					<input class="order" type="hidden" name="order"/>
 					<div class="text-center">
 						<div class="form-wrap__title h3 ttu">Обратный звонок
 						</div>
@@ -345,9 +578,7 @@
 					<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" type="tel" placeholder="Ваш телефон" name="tel" required="required"/>
 					</div>
 					<!-- +e.input-wrap--><input class="form-wrap__btn" type="submit" value="Рассчитать"/>
-					<div class="form-wrap__polite">
-						<label class="custom-input"><input class="custom-input__input" type="checkbox" name="checkbox" checked="checked"/><span class="custom-input__lab"></span><small class="custom-input__text text-secondary">Согласен на обработку и хранение моих персональных данных в соответствии с условиями</small>
-						</label>
+					<div class="form-wrap__polite text-secondary"> Нажимая на&nbsp;кнопку, вы&nbsp;даете согласие на&nbsp;обработку своих персональных данных и&nbsp;соглашаетесь с&nbsp;<a class="tdu text-secondary" href="privacy-policy.pdf" target="_blank">Политикой конфиденциальности</a>
 					</div>
 				</form>
 			</div>
