s-shipping-and-payment done

--- a/public/06-payment.html
+++ b/public/06-payment.html
@@ -240,43 +240,25 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-3">
-							<div class="left-buttons"><a class="left-buttons__delivery-button" href="#">Доставка</a><a class="left-buttons__payment-button" href="#">Оплата</a>
+							<div class="left-buttons">
+								<!-- классы поменяны местами для страницы 06--><a class="left-buttons__payment-button" href="#">Доставка</a><a class="left-buttons__delivery-button" href="#">Оплата</a>
 							</div>
 						</div>
 						<div class="col-md-9">
 							<div class="cost-time">
-								<h5>Доставляем сейф на домашний адрес или адрес офиса:</h5>
-								<ul> 
-									<li>— при покупке до 16:00 час — в этот же день (время согласоваем);</li>
-									<li>— при покупке после 16:00 час — на следующий день (время согласовываем);</li>
-									<li>— по согласованию с покупателем в любое другое удобное время.</li>
-								</ul>
-								<h3>Стоимость доставки</h3>
-								<table>
-									<tr>
-										<td>Доставка по Магнитогорску до места назначения</td>
-										<td>500 руб.</td>
-									</tr>
-									<tr>
-										<td>Подъем в квартиру/офис (при отсутствии лифта)</td>
-										<td>200 руб. этаж</td>
-									</tr>
-									<tr>
-										<td>Сборка стеллажей </td>
-										<td>10% от стоимости</td>
-									</tr>
-								</table>
-								<div class="cost-time__byer">
-									<svg class="icon icon-fire ">
-										<use xlink:href="img/svg/sprite.svg#fire"></use>
-									</svg>
-									<h5>Покупатель заранее должен предусмотреть место выгрузки, освободить подъездные пути и проходы</h5>
-								</div>
+								<h3>Оплачивайте удобным вам способом</h3>
+								<ol>
+									<li>Наличными</li>
+									<li>Банковской картой.</li>
+									<li>Безналично по выставленному счету.</li>
+								</ol><img class="object-fit-js lazy" src="#" data-src="img/@2x/visa-mastercard.png" alt=""/>
+								<h5>Доставка сейфов и стеллажей <strong>за пределы Магнитогорска</strong><br> обсуждается индивидуально.</h5>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<!-- end s-sipping-and-payment-->
 			<!-- start s-form-->
 			<div class="s-form section block-with-lazy" id="s-form">
 				<div class="container">
