--- a/public/05-shipping.html
+++ b/public/05-shipping.html
@@ -238,66 +238,76 @@
 			<!-- start s-sipping-and-payment-->
 			<div class="s-shipping-and-payment" id="s-shipping-and-payment">
 				<div class="container">
-					<div class="row">
-						<div class="col-lg-3">
-							<div class="left-buttons"><a class="left-buttons__delivery-button" href="#">Доставка</a><a class="left-buttons__payment-button" href="#">Оплата</a>
+					<div class="tabs">
+						<div class="row">
+							<div class="col-lg-3">
+								<div class="tabs__caption">
+									<div class="tabs__btn active">Доставка</div>
+									<div class="tabs__btn">Оплата</div>
+								</div>
 							</div>
-						</div>
-						<div class="col-md-9">
-							<div class="cost-time">
-								<h5>Доставляем сейф на домашний адрес или адрес офиса:</h5>
-								<ul> 
-									<li>— при покупке до 16:00 час — в этот же день (время согласоваем);</li>
-									<li>— при покупке после 16:00 час — на следующий день (время согласовываем);</li>
-									<li>— по согласованию с покупателем в любое другое удобное время.</li>
-								</ul>
-								<h3>Стоимость доставки</h3>
-								<table>
-									<tr>
-										<td>Доставка по Магнитогорску до места назначения</td>
-										<td>500 руб.</td>
-									</tr>
-									<tr>
-										<td>Подъем в квартиру/офис (при отсутствии лифта)</td>
-										<td>200 руб. этаж</td>
-									</tr>
-									<tr>
-										<td>Сборка стеллажей </td>
-										<td>10% от стоимости</td>
-									</tr>
-								</table>
-								<div class="cost-time__byer">
-									<svg class="icon icon-fire ">
-										<use xlink:href="img/svg/sprite.svg#fire"></use>
-									</svg>
-									<h5>Покупатель заранее должен предусмотреть место выгрузки, освободить подъездные пути и проходы</h5>
+							<div class="tabs__wrap col-lg-9">
+								<div class="tabs__content active">
+									<div class="cost-time">
+										<h5>Доставляем сейф на домашний адрес или адрес офиса:</h5>
+										<ul> 
+											<li>— при покупке до 16:00 час — в этот же день (время согласоваем);</li>
+											<li>— при покупке после 16:00 час — на следующий день (время согласовываем);</li>
+											<li>— по согласованию с покупателем в любое другое удобное время.</li>
+										</ul>
+										<h3>Стоимость доставки</h3>
+										<table>
+											<tr>
+												<td>Доставка по Магнитогорску до места назначения</td>
+												<td>500 руб.</td>
+											</tr>
+											<tr>
+												<td>Подъем в квартиру/офис (при отсутствии лифта)</td>
+												<td>200 руб. этаж</td>
+											</tr>
+											<tr>
+												<td>Сборка стеллажей </td>
+												<td>10% от стоимости</td>
+											</tr>
+										</table>
+										<div class="cost-time__byer"><img class="object-fit-js lazy" src="#" data-src="img/svg/fire.svg" alt=""/>
+											<h5>Покупатель заранее должен предусмотреть место выгрузки, освободить подъездные пути и проходы</h5>
+										</div>
+									</div>
+								</div>
+								<div class="tabs__content">
+									<div class="cost-time">
+										<h3>Оплачивайте удобным вам способом</h3>
+										<ol>
+											<li>Наличными</li>
+											<li>Банковской картой.</li>
+											<li>Безналично по выставленному счету.</li>
+										</ol><img class="object-fit-js lazy" src="#" data-src="img/@2x/visa-mastercard.png" alt=""/>
+										<h5>Доставка сейфов и стеллажей <strong>за пределы Магнитогорска</strong><br> обсуждается индивидуально.</h5>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- start s-form-->
-			<div class="s-form section block-with-lazy" id="s-form">
+			<!-- верстка без табов-->
+			<!-- start s-form2-->
+			<div class="s-form2 section block-with-lazy" id="s-form2">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-7">
-							<div class="section-title">
-								<h2>Получите консультацию по&nbsp;интересующим моделям  сейфов</h2>
-							</div>
-							<div class="s-form__img-wrap d-none d-lg-block"><img class="lazy res-i" src="#" data-src="img/@2x/man.png" alt=""/>
-								<div class="s-form__label">
-									<div class="s-form__label-name">Александр Сикерин
+							<div class="s-form2__img-wrap d-none d-lg-block"><img class="lazy res-i" src="#" data-src="img/@2x/man.png" alt=""/>
+								<div class="s-form2__label">
+									<div class="s-form2__label-name">Александр Сикерин
 									</div>
-									<div class="s-form__label-prof">руководитель 
+									<div class="s-form2__label-prof">руководитель 
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="col">
-							<p>Здравствуйте! Меня зовут Александр, я&nbsp;директор ООО &laquo;Комплексные технологии&raquo;. Мы&nbsp;реализуем сейфы с&nbsp;1990&nbsp;года, знаем о&nbsp;них все. </p>
-							<p>Готовы ответить на&nbsp;любой ваш вопрос по&nbsp;будням с&nbsp;10:00 до&nbsp;18:00. Оставьте номер телефона, наш специалист вам перезвонит.</p>
-							<p>И&nbsp;обещаю: мы&nbsp;не&nbsp;присылаем смс с&nbsp;рекламой и&nbsp;не&nbsp;докучаем звонками:) Только консультация.</p>
+							<h2>Есть вопросы по доставке и сборке?</h2>
 							<div class="form-wrap">
 								<form>
 									<input class="order" type="hidden" name="order" value="Получить каталог и прайс"/>
@@ -348,12 +358,7 @@
 										</div>
 										<div class="h5 text-secondar">Перезвоню в течение рабочего дня</div>
 									</div>
-									<div class="form-wrap__input-wrap form-group">
-										<label><span class="form-wrap__title">Как к вам обращаться?</span><input class="form-wrap__input form-control" type="text" placeholder="Иван" name="name" required="required"/>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-									<button class="form-wrap__btn" type="submit">Получить консультацию
+									<button class="form-wrap__btn" type="submit">Задать вопрос
 									</button>
 									<div class="form-wrap__polite text-secondary"> Нажимая на&nbsp;кнопку, вы&nbsp;даете согласие на&nbsp;обработку своих персональных данных и&nbsp;соглашаетесь с&nbsp;<a class="tdu text-secondary" href="privacy-policy.pdf" target="_blank">Политикой конфиденциальности</a>
 									</div>
@@ -363,7 +368,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- end s-form-->
+			<!-- end s-form2-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<h2>footer</h2>
