--- a/public/07-contacts.html
+++ b/public/07-contacts.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Доставка и оплата</title>
+		<title>Контакты</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no">
@@ -226,102 +226,59 @@
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Доставка и оплата</span>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Контакты</span>
 									<meta itemprop="position" content="2"/></a></li>
 						</ol>
 					</nav>
-					<div class="text-center">
-						<h1>Доставим ваш заказ в любую точку Магнитогорска</h1>
-					</div>
 				</div>
 			</div>
-			<!-- start s-form-->
-			<div class="s-form section block-with-lazy" id="s-form">
+			<div class="text-center">
+				<h1>Контакты</h1>
+			</div>
+			<!-- start s-contact-->
+			<div class="s-contact section block-with-lazy" id="s-contact">
 				<div class="container">
-					<div class="row">
-						<div class="col-lg-7">
-							<div class="section-title">
-								<h2>Получите консультацию по&nbsp;интересующим моделям  сейфов</h2>
-							</div>
-							<div class="s-form__img-wrap d-none d-lg-block"><img class="lazy res-i" src="#" data-src="img/@2x/man.png" alt=""/>
-								<div class="s-form__label">
-									<div class="s-form__label-name">Александр Сикерин
-									</div>
-									<div class="s-form__label-prof">руководитель 
-									</div>
+					<div class="row justify-content-center">
+						<div class="col-5">
+							<div class="s-contact__connection">
+								<h4>Звоните:</h4>
+								<div class="s-contact__connection-item"><img class="lazy" src="#" data-src="img/svg/telephone.svg" alt=""/>
+									<ul>
+										<li><a href="tel:+7(3519)22-00-00">+7 (3519) 22-00-22</a></li>
+										<li><a href="tel:+7(3519)42-15-11">+7 (3519) 42-15-11</a></li>
+									</ul>
 								</div>
 							</div>
 						</div>
-						<div class="col">
-							<p>Здравствуйте! Меня зовут Александр, я&nbsp;директор ООО &laquo;Комплексные технологии&raquo;. Мы&nbsp;реализуем сейфы с&nbsp;1990&nbsp;года, знаем о&nbsp;них все. </p>
-							<p>Готовы ответить на&nbsp;любой ваш вопрос по&nbsp;будням с&nbsp;10:00 до&nbsp;18:00. Оставьте номер телефона, наш специалист вам перезвонит.</p>
-							<p>И&nbsp;обещаю: мы&nbsp;не&nbsp;присылаем смс с&nbsp;рекламой и&nbsp;не&nbsp;докучаем звонками:) Только консультация.</p>
-							<div class="form-wrap">
-								<form>
-									<input class="order" type="hidden" name="order" value="Получить каталог и прайс"/>
-									<div class="tabs">
-										<div class="form-wrap__group">
-											<div class="form-wrap__group-title">Как с вами связаться?
-											</div>
-											<div class="tabs__caption">
-												<div class="tabs__btn active">
-													<svg class="icon icon-tel ">
-														<use xlink:href="img/svg/sprite.svg#tel"></use>
-													</svg>Звонок 
-												</div>
-												<div class="tabs__btn">
-													<svg class="icon icon-viber ">
-														<use xlink:href="img/svg/sprite.svg#viber"></use>
-													</svg>Viber
-												</div>
-												<div class="tabs__btn">
-													<svg class="icon icon-whatsapp ">
-														<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-													</svg>WhatsApp
-												</div>
-											</div>
-										</div> 
-										<div class="tabs__wrap">
-											<div class="tabs__content active">
-												<div class="form-wrap__input-wrap form-group">
-													<label><span class="form-wrap__title">Введите телефон:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="tel" required="required"/>
-													</label>
-												</div>
-												<!-- +e.input-wrap-->
-											</div>
-											<div class="tabs__content">
-												<div class="form-wrap__input-wrap form-group">
-													<label><span class="form-wrap__title">Введите viber:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="viber"/>
-													</label>
-												</div>
-												<!-- +e.input-wrap-->
-											</div>
-											<div class="tabs__content">
-												<div class="form-wrap__input-wrap form-group">
-													<label><span class="form-wrap__title">Введите whatsapp:</span><input class="form-wrap__input form-control" type="tel" placeholder="+7 (999) 999-99-99" name="whatsapp"/>
-													</label>
-												</div>
-												<!-- +e.input-wrap-->
-											</div>
-										</div>
-										<div class="h5 text-secondar">Перезвоню в течение рабочего дня</div>
-									</div>
-									<div class="form-wrap__input-wrap form-group">
-										<label><span class="form-wrap__title">Как к вам обращаться?</span><input class="form-wrap__input form-control" type="text" placeholder="Иван" name="name" required="required"/>
-										</label>
-									</div>
-									<!-- +e.input-wrap-->
-									<button class="form-wrap__btn" type="submit">Получить консультацию
-									</button>
-									<div class="form-wrap__polite text-secondary"> Нажимая на&nbsp;кнопку, вы&nbsp;даете согласие на&nbsp;обработку своих персональных данных и&nbsp;соглашаетесь с&nbsp;<a class="tdu text-secondary" href="privacy-policy.pdf" target="_blank">Политикой конфиденциальности</a>
-									</div>
-								</form>
+						<div class="col-3">
+							<div class="s-contact__connection">
+								<h4>Пишите:</h4>
+								<div class="s-contact__connection-item"><img class="lazy" src="#" data-src="img/svg/envelope-shape.svg" alt=""/>
+									<ul>
+										<li><a href="mailto:abcde1135@mail.ru">abcde1135@mail.ru</a></li>
+										<li><a href="mailto:abcde1135@yandex.ru">abcde1135@yandex.ru</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="col-8">
+							<div class="messanger-block">
+								<h4>Задавайте вопросы,<br> мы всегда на связи</h4><a class="messanger-block__item messanger-block__item--viber" href="#">
+								<svg class="icon icon-viber ">
+									<use xlink:href="img/svg/sprite.svg#viber"></use>
+								</svg>WhatsApp</a><a class="messanger-block__item messanger-block__item--whatsapp" href="#">
+								<svg class="icon icon-whatsapp ">
+									<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+								</svg>Viber</a>
 							</div>
 						</div>
 					</div>
+					<h2 class="text-center">Наш склад-магазин в Магнитогорске</h2>
+					<h5 class="text-center">К нам можно доехать за 15 минут из любой точки города</h5><img class="lazy" src="#" data-src="img/@2x/ofice.jpg" alt=""/>
+					<h2 class="text-center">Как добраться</h2><iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" width="100%" height="578" frameborder="0"></iframe>
 				</div>
 			</div>
-			<!-- end s-form-->
+			<!-- end s-contact-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<h2>footer</h2>
