--- a/public/index.html
+++ b/public/index.html
@@ -732,7 +732,7 @@
 			<div class="s-form section block-with-lazy section-border" id="s-form">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-7">
+						<div class="col-lg-7 align-self-end">
 							<div class="section-title">
 								<h2>Получите консультацию по&nbsp;интересующим моделям  сейфов</h2>
 							</div>
@@ -816,7 +816,7 @@
 			</div>
 			<!-- end s-form-->
 			<!-- start s-video-->
-			<section class="s-video section section-border" id="s-video">
+			<section class="s-video section" id="s-video">
 				<div class="container"><a class="s-video__block" href="https://www.youtube.com/watch?v=en6gms6e54Q&amp;list=PLIU76b8Cjem5B3sufBJ_KFTpKkMEvaTQR" data-fancybox="video-gal">
 					<div class="s-video__inner">
 						<div class="row">
