--- a/public/08-catalog.html
+++ b/public/08-catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Доставка и оплата</title>
+		<title>Каталог</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no">
@@ -228,74 +228,150 @@
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Доставка и оплата</span>
+							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Доставка и оплата</span>
 									<meta itemprop="position" content="2"/></a></li>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Каталог</span>
+									<meta itemprop="position" content="3"/></a></li>
 						</ol>
-					</nav>
-					<div class="text-center">
-						<h1>Доставим ваш заказ в любую точку Магнитогорска</h1>
-					</div>
+					</nav> 
 				</div>
 			</div>
-			<!-- start s-sipping-and-payment-->
-			<div class="s-shipping-and-payment" id="s-shipping-and-payment">
-				<div class="container">
-					<div class="tabs">
-						<div class="row">
-							<div class="col-lg-3">
-								<div class="tabs__caption">
-									<div class="tabs__btn active">Доставка</div>
-									<div class="tabs__btn">Оплата</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-4">
+						<!-- start s-filter-->
+						<section class="s-filter section" id="s-filter">
+							<div class="container">
+								<div class="section-title text-center">
+									<h2>s-filter</h2>
 								</div>
+								<div class="row"></div>
 							</div>
-							<div class="tabs__wrap col-lg-9">
-								<div class="tabs__content active">
-									<div class="cost-time">
-										<h5>Доставляем сейф на домашний адрес или адрес офиса:</h5>
-										<ul> 
-											<li>— при покупке до 16:00 час — в этот же день (время согласоваем);</li>
-											<li>— при покупке после 16:00 час — на следующий день (время согласовываем);</li>
-											<li>— по согласованию с покупателем в любое другое удобное время.</li>
-										</ul>
-										<h3>Стоимость доставки</h3>
-										<table>
-											<tr>
-												<td>Доставка по Магнитогорску до места назначения</td>
-												<td>500 руб.</td>
-											</tr>
-											<tr>
-												<td>Подъем в квартиру/офис (при отсутствии лифта)</td>
-												<td>200 руб. этаж</td>
-											</tr>
-											<tr>
-												<td>Сборка стеллажей </td>
-												<td>10% от стоимости</td>
-											</tr>
-										</table>
-										<div class="cost-time__byer"><img class="lazy" src="#" data-src="img/svg/fire.svg" alt=""/>
-											<h5>Покупатель заранее должен предусмотреть место выгрузки, освободить подъездные пути и проходы</h5>
+						</section>
+						<!-- end s-filter-->
+					</div>
+					<div class="col-8">
+						<!-- start s-catalog-->
+						<div class="s-catalog section">
+							<div class="container">
+								<div class="row">
+									<div class="s-catalog__col col-sm-6">
+										<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+											<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+											</div>
+											<table>
+												<tr>
+													<td>Цена:</td>
+													<td>2000 Р*</td>
+												</tr>
+												<tr>
+													<td>Взломостойкость:</td>
+													<td>H0 класс</td>
+												</tr>
+												<tr>
+													<td>Тип замка:</td>
+													<td>электронный</td>
+												</tr>
+												<tr>
+													<td>Внешние размеры: (ВхШхГ)</td>
+													<td>170х260х252</td>
+												</tr>
+											</table><a class="item-prod__btn" href="#">
+											<svg class="icon icon-cart ">
+												<use xlink:href="img/svg/sprite.svg#cart"></use>
+											</svg>В корзину</a>
 										</div>
 									</div>
-								</div>
-								<div class="tabs__content">
-									<div class="cost-time">
-										<h3>Оплачивайте удобным вам способом</h3>
-										<ol>
-											<li>Наличными</li>
-											<li>Банковской картой.</li>
-											<li>Безналично по выставленному счету.</li>
-										</ol><img class="object-fit-js lazy" src="#" data-src="img/@2x/visa-mastercard.png" alt=""/>
-										<h5>Доставка сейфов и стеллажей <strong>за пределы Магнитогорска</strong><br> обсуждается индивидуально.</h5>
+									<div class="s-catalog__col col-sm-6">
+										<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+											<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+											</div>
+											<table>
+												<tr>
+													<td>Цена:</td>
+													<td>2000 Р*</td>
+												</tr>
+												<tr>
+													<td>Взломостойкость:</td>
+													<td>H0 класс</td>
+												</tr>
+												<tr>
+													<td>Тип замка:</td>
+													<td>электронный</td>
+												</tr>
+												<tr>
+													<td>Внешние размеры: (ВхШхГ)</td>
+													<td>170х260х252</td>
+												</tr>
+											</table><a class="item-prod__btn" href="#">
+											<svg class="icon icon-cart ">
+												<use xlink:href="img/svg/sprite.svg#cart"></use>
+											</svg>В корзину</a>
+										</div>
+									</div>
+									<div class="s-catalog__col col-sm-6">
+										<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+											<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+											</div>
+											<table>
+												<tr>
+													<td>Цена:</td>
+													<td>2000 Р*</td>
+												</tr>
+												<tr>
+													<td>Взломостойкость:</td>
+													<td>H0 класс</td>
+												</tr>
+												<tr>
+													<td>Тип замка:</td>
+													<td>электронный</td>
+												</tr>
+												<tr>
+													<td>Внешние размеры: (ВхШхГ)</td>
+													<td>170х260х252</td>
+												</tr>
+											</table><a class="item-prod__btn" href="#">
+											<svg class="icon icon-cart ">
+												<use xlink:href="img/svg/sprite.svg#cart"></use>
+											</svg>В корзину</a>
+										</div>
+									</div>
+									<div class="s-catalog__col col-sm-6">
+										<div class="item-prod"><a class="item-prod__img-wrap" href="#"><img class="res-i" src="img/@2x/prod-1.jpg" alt=""/><span class="item-prod__more">Подробнее</span></a>
+											<div class="item-prod__title"><a href="#">Сейф Aiko T-17 EL</a>
+											</div>
+											<table>
+												<tr>
+													<td>Цена:</td>
+													<td>2000 Р*</td>
+												</tr>
+												<tr>
+													<td>Взломостойкость:</td>
+													<td>H0 класс</td>
+												</tr>
+												<tr>
+													<td>Тип замка:</td>
+													<td>электронный</td>
+												</tr>
+												<tr>
+													<td>Внешние размеры: (ВхШхГ)</td>
+													<td>170х260х252</td>
+												</tr>
+											</table><a class="item-prod__btn" href="#">
+											<svg class="icon icon-cart ">
+												<use xlink:href="img/svg/sprite.svg#cart"></use>
+											</svg>В корзину</a>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
+						<!-- end s-catalog-->
 					</div>
 				</div>
 			</div>
-			<!-- верстка без табов-->
 			<!-- start s-form2-->
-			<div class="s-form s-form--2 section block-with-lazy" id="s-form--2">
+			<div class="s-form section block-with-lazy" id="s-form">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-7 align-self-end">
@@ -309,15 +385,14 @@
 							</div>
 						</div>
 						<div class="col">
-							<h2>Есть вопросы  по&nbsp;доставке и&nbsp;сборке?</h2>
-							<h5>Напишите ваш вопрос</h5>
+							<h2>Нужна помощь в&nbsp;подборе  сейфа?</h2>
+							<h5>Наш специалист проконсультирует  вас, ответит на&nbsp;все вопросы  и&nbsp;поможет подобрать сейф</h5>
 							<div class="form-wrap">
 								<form>
 									<input class="order" type="hidden" name="order" value="Получить каталог и прайс"/>
-									<textarea></textarea>
 									<div class="tabs">
 										<div class="form-wrap__group">
-											<div class="form-wrap__group-title">Как вам удобно получить ответ?
+											<div class="form-wrap__group-title">Как с вами связаться?
 											</div>
 											<div class="tabs__caption">
 												<div class="tabs__btn active">
@@ -360,8 +435,14 @@
 												<!-- +e.input-wrap-->
 											</div>
 										</div>
+										<div class="h5 text-secondar">Перезвоню в течение рабочего дня</div>
 									</div>
-									<button class="form-wrap__btn" type="submit">Задать вопрос
+									<div class="form-wrap__input-wrap form-group">
+										<label><span class="form-wrap__title">Как к вам обращаться?</span><input class="form-wrap__input form-control" type="text" placeholder="Иван" name="name" required="required"/>
+										</label>
+									</div>
+									<!-- +e.input-wrap-->
+									<button class="form-wrap__btn" type="submit">Получить помощь  в&nbsp;подборе&nbsp;сейфа
 									</button>
 									<div class="form-wrap__polite text-secondary"> Нажимая на&nbsp;кнопку, вы&nbsp;даете согласие на&nbsp;обработку своих персональных данных и&nbsp;соглашаетесь с&nbsp;<a class="tdu text-secondary" href="privacy-policy.pdf" target="_blank">Политикой конфиденциальности</a>
 									</div>
@@ -371,7 +452,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- end s-form2-->
+			<!-- end s-form-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="row">
