--- a/public/07-contacts.html
+++ b/public/07-contacts.html
@@ -241,7 +241,7 @@
 			<div class="s-contact section block-with-lazy" id="s-contact">
 				<div class="container">
 					<div class="row justify-content-center">
-						<div class="col-5">
+						<div class="col-md-5">
 							<div class="s-contact__connection">
 								<h4>Звоните:</h4>
 								<div class="s-contact__connection-item"><img class="lazy" src="#" data-src="img/svg/telephone.svg" alt=""/>
@@ -252,7 +252,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-3">
+						<div class="col-md-3">
 							<div class="s-contact__connection">
 								<h4>Пишите:</h4>
 								<div class="s-contact__connection-item"><img class="lazy" src="#" data-src="img/svg/envelope-shape.svg" alt=""/>
@@ -263,21 +263,35 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-8">
+						<div class="col-lg-9">
 							<div class="messanger-block">
-								<h4>Задавайте вопросы,<br> мы всегда на связи</h4><a class="messanger-block__item messanger-block__item--viber" href="#">
-								<svg class="icon icon-viber ">
-									<use xlink:href="img/svg/sprite.svg#viber"></use>
-								</svg>WhatsApp</a><a class="messanger-block__item messanger-block__item--whatsapp" href="#">
-								<svg class="icon icon-whatsapp ">
-									<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-								</svg>Viber</a>
+								<div class="row">
+									<div class="col-md-4">
+										<div class="messanger-block__question">
+											<h4>Задавайте вопросы, мы всегда на связи</h4>
+										</div>
+									</div>
+									<div class="col-sm-4"><a class="messanger-block__item messanger-block__item--whatsapp" href="#">
+										<svg class="icon icon-whatsapp ">
+											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
+										</svg><span>WhatsApp</span></a>
+									</div>
+									<div class="col-sm-4"><a class="messanger-block__item messanger-block__item--viber" href="#">
+										<svg class="icon icon-viber ">
+											<use xlink:href="img/svg/sprite.svg#viber"></use>
+										</svg><span>Viber</span></a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
-					<h2 class="text-center">Наш склад-магазин в Магнитогорске</h2>
-					<h5 class="text-center">К нам можно доехать за 15 минут из любой точки города</h5><img class="lazy" src="#" data-src="img/@2x/ofice.jpg" alt=""/>
-					<h2 class="text-center">Как добраться</h2><iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" width="100%" height="578" frameborder="0"></iframe>
+					<div class="s-contact__warehouse text-center">
+						<h2>Наш склад-магазин в Магнитогорске</h2>
+						<h5>К нам можно доехать за 15 минут из любой точки города</h5><img class="lazy" src="#" data-src="img/@2x/ofice.jpg" alt=""/>
+					</div>
+					<div class="s-contact__map text-center">
+						<h2>Как добраться</h2><iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" width="100%" height="578" frameborder="0"></iframe>
+					</div>
 				</div>
 			</div>
 			<!-- end s-contact-->
