--- a/public/03-catalog-menu.html
+++ b/public/03-catalog-menu.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Контакты</title>
+		<title>Каталог</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no">
@@ -228,87 +228,64 @@
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Контакты</span>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Каталог</span>
 									<meta itemprop="position" content="2"/></a></li>
 						</ol>
 					</nav>
 					<div class="text-center">
-						<h1>Контакты</h1>
+						<h1>Какой сейф вам нужен?</h1>
 					</div>
 				</div>
 			</div>
-			<!-- start s-contact-->
-			<div class="s-contact block-with-lazy" id="s-contact">
+			<!-- start s-catalog-menu-->
+			<div class="s-catalog-menu" id="s-catalog-menu">
 				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-md-5">
-							<div class="s-contact__connection">
-								<h4>Звоните:</h4>
-								<div class="s-contact__connection-item"><img class="lazy" src="#" data-src="img/svg/telephone.svg" alt=""/>
-									<ul>
-										<li><a href="tel:+7(3519)22-00-00">+7 (3519) 22-00-22</a></li>
-										<li><a href="tel:+7(3519)42-15-11">+7 (3519) 42-15-11</a></li>
-									</ul>
+					<div class="row">
+								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
+									<h3 class="text-center">Офисные и бухгалтерские</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-1.jpg" alt=""/></span></a>
 								</div>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="s-contact__connection">
-								<h4>Пишите:</h4>
-								<div class="s-contact__connection-item"><img class="lazy" src="#" data-src="img/svg/envelope-shape.svg" alt=""/>
-									<ul>
-										<li><a href="mailto:abcde1135@mail.ru">abcde1135@mail.ru</a></li>
-										<li><a href="mailto:abcde1135@yandex.ru">abcde1135@yandex.ru</a></li>
-									</ul>
+								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
+									<h3 class="text-center">Взломостойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-2.jpg" alt=""/></span><span class="s-catalog-menu__hover-block">
+									<h3 class="text-center">Взломостойкие</h3>
+									<p>Согласно ГОСТ <strong>взломостойкие</strong> сейфы делятся на&nbsp;11&nbsp;классов, включая нулевой&nbsp;&mdash; минимальный. Профессиональный взломщик сможет открыть такой сейф за&nbsp;пять минут, а&nbsp;на&nbsp;сейф пятого класса с&nbsp;электронным и&nbsp;ключевым замком ему потребуется от&nbsp;пяти часов до&nbsp;нескольких дней.<br><br> Сейфы <strong>нулевого и&nbsp;первого</strong> класса желательно размещать <br>в&nbsp;помещениях, уже поставленных на&nbsp;охрану.<br><br> Для сейфов <strong>второго</strong> класса дополнительная защита не&nbsp;нужна при условии их&nbsp;надежного крепления к&nbsp;стене или полу.<br><br> Сейфы <strong>с&nbsp;третьего по&nbsp;пятый</strong> класс используются для хранения особо ценного содержимого, ими пользуются даже в&nbsp;банках и&nbsp;ювелирных магазинах.<br><br> Сейфы более высокого класса выбирают для хранения крупных ценностей. Толщина стенок таких сейфов может достигать 120&nbsp;мм, вес&nbsp;&mdash; быть более тонны, и&nbsp;стоят они в&nbsp;разы дороже.</p></span></a>
 								</div>
-							</div>
-						</div>
-						<div class="col-lg-9">
-							<div class="messanger-block">
-								<div class="row">
-									<div class="col-md-4">
-										<div class="messanger-block__question">
-											<h4>Задавайте вопросы, мы всегда на связи</h4>
-										</div>
-									</div>
-									<div class="col-sm-4"><a class="messanger-block__item messanger-block__item--whatsapp" href="#">
-										<svg class="icon icon-whatsapp ">
-											<use xlink:href="img/svg/sprite.svg#whatsapp"></use>
-										</svg><span>WhatsApp</span></a>
-									</div>
-									<div class="col-sm-4"><a class="messanger-block__item messanger-block__item--viber" href="#">
-										<svg class="icon icon-viber ">
-											<use xlink:href="img/svg/sprite.svg#viber"></use>
-										</svg><span>Viber</span></a>
-									</div>
+								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
+									<h3 class="text-center">Огнестойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-3.jpg" alt=""/></span><span class="s-catalog-menu__hover-block">
+									<h3 class="text-center">Огнестойкие</h3>
+									<p><strong>Огнестойкие</strong> сейфы уберегут содержимое от&nbsp;пожара, но&nbsp;не&nbsp;от&nbsp;взлома. Их&nbsp;стенки изготавливают из&nbsp;материалов с&nbsp;низкой теплопроводностью, например, из&nbsp;алюминиевых пластин толщиной до&nbsp;1,5&nbsp;мм. Пространство между пластинами заполняют пенобетоном.</p></span></a>
 								</div>
-							</div>
-						</div>
-					</div>
-					<div class="s-contact__warehouse text-center">
-						<h2>Наш склад-магазин в Магнитогорске</h2>
-						<h5>К нам можно доехать за 15 минут из любой точки города</h5><img class="lazy" src="#" data-src="img/@2x/ofice.jpg" alt=""/>
-					</div>
-					<div class="how-to-get text-center">
-						<h2>Как добраться</h2>
-						<div class="map-wrap">
-							<div class="how-to-get__contact-block">
-								<ul>
-									<li>
-										 Адрес: <br><span>г. Магнитогорск, <br> ул.Куйбышева, д.25</span><img class="lazy" src="#" data-src="img/svg/maps-and-flags.svg" alt=""/></li>
-									<li>
-										 Телефон: <br><a href="tel:+7(3519)22-00-00">+7 (3519) 22-00-22</a><img class="lazy" src="#" data-src="img/svg/telephone.svg" alt=""/></li>
-									<li>
-										 Email: <br><a href="mailto:abcde1135@mail.ru">abcde1135@mail.ru</a><img class="lazy" src="#" data-src="img/svg/envelope-shape.svg" alt=""/></li>
-									<li>
-										 Работаем: <br><span>пн-пт, с 10:00 до 18:00</span><img class="lazy" src="#" data-src="img/svg/clock-circular-outline.svg" alt=""/></li>
-								</ul>
-							</div><iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" width="100%" height="578" frameborder="0"></iframe>
-						</div>
+								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
+									<h3 class="text-center">Взломо-огнестойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-4.jpg" alt=""/></span></a>
+								</div>
+								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
+									<h3 class="text-center">Мебельные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-5.jpg" alt=""/></span><span class="s-catalog-menu__hover-block">
+									<h3 class="text-center">Мебельные</h3>
+									<p><strong>Мебельные</strong> сейфы устанавливаются в&nbsp;тумбы, шкафы, на&nbsp;полки и&nbsp;закрепляются специальным крепежом, чтобы их&nbsp;нельзя было унести. Они помогут спрятать ценные вещи от&nbsp;глаз посторонних, но&nbsp;не&nbsp;защитят их&nbsp;от&nbsp;взломщиков.</p></span></a>
+								</div>
+								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
+									<h3 class="text-center">Встраиваемые</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-6.jpg" alt=""/></span><span class="s-catalog-menu__hover-block">
+									<h3 class="text-center">Встраиваемые</h3>
+									<p><strong>Встраиваемые сейфы</strong> имеют небольшие габариты и&nbsp;монтируются в&nbsp;стену или пол. Относятся к&nbsp;взломостойким сейфам.</p></span></a>
+								</div>
+								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
+									<h3 class="text-center">Оружейные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-7.jpg" alt=""/></span><span class="s-catalog-menu__hover-block">
+									<h3 class="text-center">Оружейные</h3>
+									<p>Согласно Федеральному закону &#8470;&nbsp;150-ФЗ &laquo;Об&nbsp;оружии&raquo; гражданам <strong>предписано хранить огнестрельное оружие в&nbsp;запираемых сейфах</strong> или металлических ящиках и&nbsp;исключить доступ к&nbsp;ним посторонних лиц. Это касается любого огнестрельного оружия&nbsp;&mdash; травматического, гладкоствольного и&nbsp;нарезного.</p></span></a>
+								</div>
+								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
+									<h3 class="text-center">Мини-сейфы для дома</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-8.jpg" alt=""/></span><span class="s-catalog-menu__hover-block">
+									<h3 class="text-center">Мини-сейфы</h3>
+									<p><strong>Мини-сейфы</strong> для дома покупают, если нужно сохранить ценности от&nbsp;детей или домашних работников. Обычно их&nbsp;устанавливают и&nbsp;крепят внутри шкафов. Для защиты от&nbsp;пожара и&nbsp;взлома такие сейфы не&nbsp;помогут.</p></span></a>
+								</div>
+								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
+									<h3 class="text-center">Автомобильные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-9.jpg" alt=""/></span><span class="s-catalog-menu__hover-block">
+									<h3 class="text-center">Автомобильные</h3>
+									<p>Специальные маленькие сейфы крепятся под сиденье авто: <strong>из&nbsp;окна незаметны, а&nbsp;чтобы их&nbsp;выдернуть нужно время.</strong> Плюс автомобильные воришки редко имеют при себе инструменты для вскрытия сейфов, поэтому шансов на&nbsp;то, что они сумеют добраться до&nbsp;содержимого, очень мало.</p></span></a>
+								</div>
 					</div>
 				</div>
 			</div>
-			<!-- end s-contact-->
+			<!-- end s-catalog-menu-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="row">
