--- a/public/21-thanks2.html
+++ b/public/21-thanks2.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Каталог</title>
+		<title>Спасибо, мы приняли вашу заявку!</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no">
@@ -227,80 +227,25 @@
 				<div class="container">
 					<nav aria-label="breadcrumb">
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Вернуться на сайт</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Каталог</span>
-									<meta itemprop="position" content="2"/></a></li>
 						</ol>
 					</nav>
-					<div class="text-center">
-						<h1>Какой сейф вам нужен?</h1>
-					</div>
 				</div>
 			</div>
-			<!-- start s-catalog-menu-->
-			<div class="s-catalog-menu" id="s-catalog-menu">
+			<!-- start s-thanks-->
+			<div class="s-thanks" id="s-thanks">
 				<div class="container">
 					<div class="row">
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Офисные и бухгалтерские</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-1.jpg" alt=""/></span></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Взломостойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-2.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Взломостойкие</h3>
-										<p>Согласно ГОСТ <strong>взломостойкие</strong> сейфы делятся на&nbsp;11&nbsp;классов, включая нулевой&nbsp;&mdash; минимальный. Профессиональный взломщик сможет открыть такой сейф за&nbsp;пять минут, а&nbsp;на&nbsp;сейф пятого класса с&nbsp;электронным и&nbsp;ключевым замком ему потребуется от&nbsp;пяти часов до&nbsp;нескольких дней.<br><br> Сейфы <strong>нулевого и&nbsp;первого</strong> класса желательно размещать <br>в&nbsp;помещениях, уже поставленных на&nbsp;охрану.<br><br> Для сейфов <strong>второго</strong> класса дополнительная защита не&nbsp;нужна при условии их&nbsp;надежного крепления к&nbsp;стене или полу.<br><br> Сейфы <strong>с&nbsp;третьего по&nbsp;пятый</strong> класс используются для хранения особо ценного содержимого, ими пользуются даже в&nbsp;банках и&nbsp;ювелирных магазинах.<br><br> Сейфы более высокого класса выбирают для хранения крупных ценностей. Толщина стенок таких сейфов может достигать 120&nbsp;мм, вес&nbsp;&mdash; быть более тонны, и&nbsp;стоят они в&nbsp;разы дороже.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Огнестойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-3.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Огнестойкие</h3>
-										<p><strong>Огнестойкие</strong> сейфы уберегут содержимое от&nbsp;пожара, но&nbsp;не&nbsp;от&nbsp;взлома. Их&nbsp;стенки изготавливают из&nbsp;материалов с&nbsp;низкой теплопроводностью, например, из&nbsp;алюминиевых пластин толщиной до&nbsp;1,5&nbsp;мм. Пространство между пластинами заполняют пенобетоном.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Взломо-огнестойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-4.jpg" alt=""/></span></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Мебельные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-5.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Мебельные</h3>
-										<p><strong>Мебельные</strong> сейфы устанавливаются в&nbsp;тумбы, шкафы, на&nbsp;полки и&nbsp;закрепляются специальным крепежом, чтобы их&nbsp;нельзя было унести. Они помогут спрятать ценные вещи от&nbsp;глаз посторонних, но&nbsp;не&nbsp;защитят их&nbsp;от&nbsp;взломщиков.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Встраиваемые</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-6.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Встраиваемые</h3>
-										<p><strong>Встраиваемые сейфы</strong> имеют небольшие габариты и&nbsp;монтируются в&nbsp;стену или пол. Относятся к&nbsp;взломостойким сейфам.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Оружейные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-7.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Оружейные</h3>
-										<p>Согласно Федеральному закону &#8470;&nbsp;150-ФЗ &laquo;Об&nbsp;оружии&raquo; гражданам <strong>предписано хранить огнестрельное оружие в&nbsp;запираемых сейфах</strong> или металлических ящиках и&nbsp;исключить доступ к&nbsp;ним посторонних лиц. Это касается любого огнестрельного оружия&nbsp;&mdash; травматического, гладкоствольного и&nbsp;нарезного.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Мини-сейфы для дома</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-8.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Мини-сейфы</h3>
-										<p><strong>Мини-сейфы</strong> для дома покупают, если нужно сохранить ценности от&nbsp;детей или домашних работников. Обычно их&nbsp;устанавливают и&nbsp;крепят внутри шкафов. Для защиты от&nbsp;пожара и&nbsp;взлома такие сейфы не&nbsp;помогут.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Автомобильные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-9.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Автомобильные</h3>
-										<p>Специальные маленькие сейфы крепятся под сиденье авто: <strong>из&nbsp;окна незаметны, а&nbsp;чтобы их&nbsp;выдернуть нужно время.</strong> Плюс автомобильные воришки редко имеют при себе инструменты для вскрытия сейфов, поэтому шансов на&nbsp;то, что они сумеют добраться до&nbsp;содержимого, очень мало.</p>
-									</div></a>
-								</div>
+						<div class="col after-quiz"><img class="lazy check-mark" src="#" data-src="img/svg/tick.svg" alt=""/>
+							<h2>Иван, мы отправили вам подборку сейфов,<br> подходящих под выбранные параметры.</h2>
+							<p>Скидку&nbsp;10% мы&nbsp;закрепили за&nbsp;вашим номером телефона,<br> она действительна в&nbsp;течение 2-х недель.</p><img class="lazy" src="#" data-src="img/@2x/thanks-safes.jpg" alt=""/>
+							<h5>Вы&nbsp;можете в&nbsp;любое время посмотреть сейфы на&nbsp;складе: <br>оценить размеры, попробовать закрыть и&nbsp;открыть замок, задать <br> вопросы&nbsp;&mdash; позвоните и&nbsp;договоритесь о&nbsp;встрече.</h5><a href="tel:+7(3519)22-00-22">+7 (3519) 22-00-22</a>
+						</div>
 					</div>
 				</div>
 			</div>
-			<!-- end s-catalog-menu-->
+			<!-- end s-thanks-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="row">
