--- a/public/12-basket.html
+++ b/public/12-basket.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Каталог</title>
+		<title>Корзина с товаром</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, shrink-to-fit=no">
@@ -229,78 +229,111 @@
 						<ol class="breadcrumb" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
 							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
 									<meta itemprop="position" content="1"/></a></li>
-							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Каталог</span>
+							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Доставка и оплата</span>
 									<meta itemprop="position" content="2"/></a></li>
+							<li class="breadcrumb-item" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Взломостойкие сейфы</span>
+									<meta itemprop="position" content="3"/></a></li>
+							<li class="breadcrumb-item active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Сейф Aiko T-17 EL</span>
+									<meta itemprop="position" content="4"/></a></li>
 						</ol>
 					</nav>
-					<div class="text-center">
-						<h1>Какой сейф вам нужен?</h1>
-					</div>
+					<div class="text-right"><a href="#">< Назад к сейфам</a></div>
 				</div>
 			</div>
-			<!-- start s-catalog-menu-->
-			<div class="s-catalog-menu" id="s-catalog-menu">
+			<!-- start s-prod-head2-->
+			<div class="s-prod-head s-prod-head-basket">
 				<div class="container">
 					<div class="row">
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Офисные и бухгалтерские</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-1.jpg" alt=""/></span></a>
+						<div class="col-lg-4 col-md-6">
+							<div class="s-prod-head-images">
+								<div class="s-prod-head-images__inner">
+									<div class="s-prod-head-images__slider s-prod-head-images__slider--lg s-prod-head-images__slider--lg-js">
+										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
+												<!-- возможно я не правильно убрал слайдер--></a>
+										</div>
+										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
+												<!-- возможно я не правильно убрал слайдер--></a>
+										</div>
+										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
+												<!-- возможно я не правильно убрал слайдер--></a>
+										</div>
+										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
+												<!-- возможно я не правильно убрал слайдер--></a>
+										</div>
+										<div class="s-prod-head-images__slide s-prod-head-images__slide--lg"><a href="img/@2x/prod-1.jpg" data-fancybox="prod-gal"><img class="res-i" src="#" data-lazy="img/@2x/prod-1.jpg" alt=""/>
+												<!-- возможно я не правильно убрал слайдер--></a>
+										</div>
+									</div>
+									<!-- +e.slider--sm.--sm-js
+									// - for (var x = 0; x < 5; x++)
+										+e.slide
+											+e.img-wrap
+												+img()
+									-->
 								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Взломостойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-2.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Взломостойкие</h3>
-										<p>Согласно ГОСТ <strong>взломостойкие</strong> сейфы делятся на&nbsp;11&nbsp;классов, включая нулевой&nbsp;&mdash; минимальный. Профессиональный взломщик сможет открыть такой сейф за&nbsp;пять минут, а&nbsp;на&nbsp;сейф пятого класса с&nbsp;электронным и&nbsp;ключевым замком ему потребуется от&nbsp;пяти часов до&nbsp;нескольких дней.<br><br> Сейфы <strong>нулевого и&nbsp;первого</strong> класса желательно размещать <br>в&nbsp;помещениях, уже поставленных на&nbsp;охрану.<br><br> Для сейфов <strong>второго</strong> класса дополнительная защита не&nbsp;нужна при условии их&nbsp;надежного крепления к&nbsp;стене или полу.<br><br> Сейфы <strong>с&nbsp;третьего по&nbsp;пятый</strong> класс используются для хранения особо ценного содержимого, ими пользуются даже в&nbsp;банках и&nbsp;ювелирных магазинах.<br><br> Сейфы более высокого класса выбирают для хранения крупных ценностей. Толщина стенок таких сейфов может достигать 120&nbsp;мм, вес&nbsp;&mdash; быть более тонны, и&nbsp;стоят они в&nbsp;разы дороже.</p>
-									</div></a>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<h1>Сейф Aiko T-17 EL</h1>
+							<div class="s-prod-head__type">Взломостойкий
+							</div>
+							<p> <strong>Характеристики</strong></p>
+							<table>
+												<tr>
+													<td>Размер (ВхШхГ):</td>
+													<td><strong>170х260х252 мм</strong></td>
+												</tr>
+												<tr>
+													<td>Внутренний размер (ВхШхГ):</td>
+													<td><strong>170х260х252 мм</strong></td>
+												</tr>
+												<tr>
+													<td>Замки:</td>
+													<td><strong>ключевой</strong></td>
+												</tr>
+												<tr>
+													<td>Вес:</td>
+													<td><strong>7,0 кг</strong></td>
+												</tr>
+												<tr>
+													<td>Объем:</td>
+													<td><strong>3,0 л</strong></td>
+												</tr>
+												<tr>
+													<td>Взломостойкость:</td>
+													<td><strong>S1 класс</strong></td>
+												</tr>
+							</table>
+						</div>
+						<div class="col-lg-4">
+							<div class="s-prod-head-sidebar">
+								<div class="s-prod-head-sidebar__number">
+									<button>-</button>
+									<input type="text" placeholder="1"/>
+									<button>+</button>
 								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Огнестойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-3.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Огнестойкие</h3>
-										<p><strong>Огнестойкие</strong> сейфы уберегут содержимое от&nbsp;пожара, но&nbsp;не&nbsp;от&nbsp;взлома. Их&nbsp;стенки изготавливают из&nbsp;материалов с&nbsp;низкой теплопроводностью, например, из&nbsp;алюминиевых пластин толщиной до&nbsp;1,5&nbsp;мм. Пространство между пластинами заполняют пенобетоном.</p>
-									</div></a>
+								<div class="s-prod-head-sidebar__amount">2000 Р
 								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Взломо-огнестойкие</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-4.jpg" alt=""/></span></a>
+								<div class="s-prod-head-sidebar__remove">
+									<button>x</button>
 								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Мебельные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-5.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Мебельные</h3>
-										<p><strong>Мебельные</strong> сейфы устанавливаются в&nbsp;тумбы, шкафы, на&nbsp;полки и&nbsp;закрепляются специальным крепежом, чтобы их&nbsp;нельзя было унести. Они помогут спрятать ценные вещи от&nbsp;глаз посторонних, но&nbsp;не&nbsp;защитят их&nbsp;от&nbsp;взломщиков.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Встраиваемые</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-6.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Встраиваемые</h3>
-										<p><strong>Встраиваемые сейфы</strong> имеют небольшие габариты и&nbsp;монтируются в&nbsp;стену или пол. Относятся к&nbsp;взломостойким сейфам.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Оружейные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-7.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Оружейные</h3>
-										<p>Согласно Федеральному закону &#8470;&nbsp;150-ФЗ &laquo;Об&nbsp;оружии&raquo; гражданам <strong>предписано хранить огнестрельное оружие в&nbsp;запираемых сейфах</strong> или металлических ящиках и&nbsp;исключить доступ к&nbsp;ним посторонних лиц. Это касается любого огнестрельного оружия&nbsp;&mdash; травматического, гладкоствольного и&nbsp;нарезного.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Мини-сейфы для дома</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-8.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Мини-сейфы</h3>
-										<p><strong>Мини-сейфы</strong> для дома покупают, если нужно сохранить ценности от&nbsp;детей или домашних работников. Обычно их&nbsp;устанавливают и&nbsp;крепят внутри шкафов. Для защиты от&nbsp;пожара и&nbsp;взлома такие сейфы не&nbsp;помогут.</p>
-									</div></a>
-								</div>
-								<div class="col-lg-4 col-md-6"><a class="s-catalog-menu__item" href="#">
-									<h3 class="text-center">Автомобильные</h3><span class="s-catalog-menu__img-wrap"><img class="lazy" src="#" data-src="img/@2x/s-variants-9.jpg" alt=""/></span>
-									<div class="s-catalog-menu__hover-block">
-										<h3 class="text-center">Автомобильные</h3>
-										<p>Специальные маленькие сейфы крепятся под сиденье авто: <strong>из&nbsp;окна незаметны, а&nbsp;чтобы их&nbsp;выдернуть нужно время.</strong> Плюс автомобильные воришки редко имеют при себе инструменты для вскрытия сейфов, поэтому шансов на&nbsp;то, что они сумеют добраться до&nbsp;содержимого, очень мало.</p>
-									</div></a>
-								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row to-order justify-content-end">
+						<div class="col-lg-3 col-md-6">
+							<h5>Итого без доставки</h5>
+							<h3>2000 Р</h3>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="s-prod-head__checkout">
+								<button>Оформить заказ</button><a href="#">Доставка и оплата</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<!-- end s-catalog-menu-->
+			<!-- end s-prod-head2-->
 			<footer class="footer block-with-lazy">
 				<div class="container">
 					<div class="row">
